--- a/examples/notebook.ipynb
+++ b/examples/notebook.ipynb
@@ -108,7 +108,7 @@
    "cell_type": "code",
    "execution_count": 49,
    "source": [
-    "# Remember to run the DROT before executing this cell\n",
+    "# Remember to run DROT before executing this cell\n",
     "\n",
     "filenames = [ 'output/' + 'drot_512_0.000977.csv' ];\n",
     "labels = ['Drot']\n",
@@ -599,61 +599,6 @@
    "metadata": {}
   },
   {
-   "cell_type": "markdown",
-   "source": [
-    "## Compute Sinkhorn for the different losses\n",
-    "\n"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "reg = 0.01\n",
-    "# x_sk = ot.sinkhorn(p, q, C.copy(), reg)\n",
-    "# x_gpu = ot.gpu.sinkhorn(p, q, C, reg)\n",
-    "\n",
-    "x_gpu = sinkhorn_knopp(p, q, C.copy(), reg, numItermax=1000, stopThr=1e-4)"
-   ],
-   "outputs": [],
-   "metadata": {
-    "scrolled": true
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "%timeit x_sk = ot.sinkhorn(p, q, C, reg, stopThr=1e-4)"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "# d_sk = np.sum(x_sk*C) \n",
-    "d_gpu = cp.sum(x_gpu*C)\n",
-    "\n",
-    "d_emd, d_sk, d_gpu"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "def run_sk(p, q, C, reg):\n",
-    "    sinkhorn_knopp(p, q, C, reg, numItermax=1000, stopThr=1e-4, to_numpy=False)\n",
-    "print(repeat(run_sk, (p, q, C, 1e-2), n_repeat=1))      "
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
    "cell_type": "code",
    "execution_count": 14,
    "source": [
@@ -823,6 +768,36 @@
    ],
    "outputs": [],
    "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Mics"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "reg = 0.01\n",
+    "# x_sk = ot.sinkhorn(p, q, C.copy(), reg)\n",
+    "# x_gpu = ot.gpu.sinkhorn(p, q, C, reg)\n",
+    "\n",
+    "x_gpu = sinkhorn_knopp(p, q, C.copy(), reg, numItermax=1000, stopThr=1e-4)\n",
+    "%timeit x_sk = ot.sinkhorn(p, q, C, reg, stopThr=1e-4)\n",
+    "# d_sk = np.sum(x_sk*C) \n",
+    "d_gpu = cp.sum(x_gpu*C)\n",
+    "\n",
+    "d_emd, d_sk, d_gpu\n",
+    "def run_sk(p, q, C, reg):\n",
+    "    sinkhorn_knopp(p, q, C, reg, numItermax=1000, stopThr=1e-4, to_numpy=False)\n",
+    "print(repeat(run_sk, (p, q, C, 1e-2), n_repeat=1))      "
+   ],
+   "outputs": [],
+   "metadata": {
+    "scrolled": true
+   }
   },
   {
    "cell_type": "code",
